# benzo

./: .dockerignore  .env.example  .gitignore  .neon  .npmrc  .vercelignore  AGENT_SPEC.md  AUDITOR.md  BENZO.md  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile.bff  Dockerfile.static  README.md  SECURITY.md  biome.json  deny.toml  package.json  playwright.config.ts  playwright.live.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  turbo.json
.claude/: settings.json
.github/workflows/: contracts.yml  packages.yml  security.yml
anchor/: package.json
anchor/src/: client.ts  index.ts  sep10.ts  server.ts
apps/cli/: package.json
apps/console/: index.html  package.json  vercel.json  vite.config.ts
apps/console-api/: package.json
apps/extension/: README.md  package.json
apps/landing/: index.html  package.json  vercel.json  vite.config.ts
apps/merchant/: README.md  package.json
apps/paylink/: README.md  package.json
apps/pos/: README.md  package.json
apps/telegram/: README.md  package.json
apps/wallet/: .gitignore  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/wallet-api/: package.json  tsconfig.json
apps/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
audits/: README.md  circomspect-report.txt  scout-report.txt
ceremony/: CEREMONY.md  TRANSCRIPT-funds_attestation.txt  TRANSCRIPT-joinsplit.txt  TRANSCRIPT-kyc_credential.txt
ceremony/funds_attestation/: funds_attestation_vk.json
ceremony/joinsplit/: joinsplit_vk.json
ceremony/joinsplit_org/: joinsplit_org.ceremony.json  joinsplit_org_vk.json
ceremony/kyc_credential/: kyc_credential_vk.json
circuits/groth16/: cross_netting.circom  funds_attestation.circom  funds_attestation_impl.circom  joinsplit.circom  joinsplit_impl.circom  joinsplit_org.circom  joinsplit_org_impl.circom  kyb_credential.circom  kyc_credential.circom  kyc_credential_impl.circom  note.circom  org_note_spend.circom  org_note_spend_impl.circom  org_spend_auth.circom  org_spend_auth_impl.circom  payout_innocence.circom  payroll_computation.circom  proof_of_balance.circom  proof_of_balance_impl.circom  proof_of_balance_org.circom  proof_of_balance_org_impl.circom  proof_of_sum.circom  proof_of_sum_impl.circom  proof_of_sum_org.circom  proof_of_sum_org_impl.circom  shield.circom  shield_impl.circom  spending_cap.circom  trivial.circom  unshield.circom  unshield_impl.circom
contracts/asp_membership/: Cargo.toml
contracts/asp_membership/src/: lib.rs  test.rs
contracts/asp_membership/test_snapshots/test/: test_constructor_sets_admin_and_levels.1.json  test_get_root.1.json  test_hash_pair.1.json  test_init_valid.1.json  test_insert_leaf.1.json  test_insert_leaf_merkle_tree_full.1.json  test_insert_leaf_requires_admin.1.json  test_insert_leaf_requires_admin_when_re_enabled.1.json  test_insert_leaf_without_admin_when_permissionless.1.json  test_merkle_consistency.1.json  test_multiple_insertions.1.json  test_new_admin_can_insert_after_update.1.json  test_permissionless_insert_multiple_leaves.1.json  test_permissionless_insert_updates_root.1.json  test_set_admin_insert_only.1.json  test_update_admin.1.json
contracts/audit_root/: Cargo.toml
contracts/escrow/: Cargo.toml
contracts/handle_registry/: Cargo.toml
contracts/identity_nullifier_set/: Cargo.toml
contracts/issuer_registry/: Cargo.toml
contracts/merkle/: Cargo.toml
contracts/merkle/src/: lib.rs  test.rs
contracts/merkle/test_snapshots/test/: init_and_initial_root_nonzero.1.json  insert_updates_root_and_history.1.json  onchain_root_matches_offchain_zkhash_mirror.1.json  tree_full_rejects_insert.1.json
contracts/mvk_registry/: Cargo.toml
contracts/nullifier_set/: Cargo.toml
contracts/org_account/: Cargo.toml
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs  pool.rs  test.rs
contracts/pool/test_snapshots/test/: pause_blocks_ops.1.json  shield_custodies_tokens_and_inserts_leaf.1.json  shield_rejects_invalid_proof.1.json  shield_rejects_over_cap.1.json  shield_rejects_stale_asp_root.1.json  transfer_rejects_unknown_root_and_tampered_ext.1.json  transfer_spends_inserts_pays_fee_and_replays_idempotently.1.json  withdraw_pays_out_and_is_replay_safe.1.json
contracts/ramp/: Cargo.toml
contracts/request_registry/: Cargo.toml
contracts/verifier_groth16/: Cargo.toml
contracts/verifier_groth16/src/: lib.rs  test.rs
contracts/verifier_groth16/test_snapshots/test/: vk_registry_set_once_and_verify.1.json
contracts/viewkey_anchor/: Cargo.toml
deploy/phala/: docker-compose.ceremony.yml  docker-compose.yml
deploy/vps/: Caddyfile  deploy.sh  docker-compose.yml
deployments/: testnet.json
docs/: ARCHITECTURE-CLIENTSIDE-ZK.md  CAPABILITY-MATRIX.md  MAINNET-RUNBOOK.md  MOFN-CEREMONY.md  THREAT_MODEL.md  TRACK_B_ULTRAHONK.md  ZK-AUDIT-AND-STANDARDS.md  ZKLOGIN.md
indexer/: package.json
indexer/src/: index.ts
relayer/: package.json
relayer/src/: index.ts
scripts/: audit-action-coverage.mjs  audit-privacy-payloads.mjs  audit-production-db.mjs  audit-production-env.mjs  build-artifacts.sh  build-business-deck-pptx.py  build-console-report-pdf.mjs  build-deck-pptx.py  capture-console-onboarding.mjs  capture-console-screens.mjs  capture-console-ui.mjs  capture-deck-screens.mjs  capture-demo-screens.mjs  ceremony.sh  check-artifacts.mjs  demo.sh  deploy-testnet.sh  dev-stack.sh  extract-poseidon-params.mjs  fetch-artifacts.sh  gen-artifact-manifest.mjs  groth16-to-soroban.mjs  render-console-diagrams.mjs  setup-testnet-env.sh  smoke-wallet-account-freedom.mjs  stage-wallet-browser-artifacts.mjs  tee-ceremony.mjs  verify-ceremony-quote.mjs
scripts/motion/: generate.mjs  prompt.txt  status.mjs  wait.mjs
sdk/: package.json
sdk/src/: account.ts  client.ts  index.ts  merkle.ts  notes.ts  pool.ts  prover.ts  scanner.ts
sdk/test/: circuits.test.ts
services/prover-enclave/: DEPLOY.md  Dockerfile  package.json
tests/: gen-replay-fixture.mjs  package.json  replay-verify.mjs
tests/e2e/: admission.mjs  console-api-smoke.mjs  console-org-batch-payroll.mjs  console-org-payroll.mjs  (+25 more)
(+246 files in other folders)
