[workspace]
members = [
    "contracts/common/types",
    "contracts/common/soroban-utils",
    "contracts/verifier_groth16",
    "contracts/merkle",
    "contracts/nullifier_set",
    "contracts/asp_membership",
    "contracts/asp_non_membership",
    "contracts/viewkey_anchor",
    "contracts/handle_registry",
    "contracts/request_registry",
    "contracts/pool",
    "circuits/poseidon_params/zkhash",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/akshmnd/stellar-benzo"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
ark-bn254 = { version = "0.6.0", default-features = false, features = ["curve"] }
ark-ec = { version = "0.6.0", default-features = false }
ark-ff = { version = "0.6.0", default-features = false }
ark-groth16 = { version = "0.6.0", default-features = false }
ark-serialize = { version = "0.6.0", default-features = false }
ark-std = { version = "0.6.0", default-features = false, features = ["std"] }
asp-membership = { path = "contracts/asp_membership" }
asp-non-membership = { path = "contracts/asp_non_membership" }
benzo-merkle = { path = "contracts/merkle" }
benzo-nullifier-set = { path = "contracts/nullifier_set" }
benzo-pool = { path = "contracts/pool" }
benzo-request-registry = { path = "contracts/request_registry" }
benzo-verifier-groth16 = { path = "contracts/verifier_groth16" }
benzo-viewkey-anchor = { path = "contracts/viewkey_anchor" }
cfg-if = { version = "1", default-features = false }
contract-types = { path = "contracts/common/types" }
getrandom = { version = "0.2", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false }
sha2 = { version = "0.11.0", default-features = false }
soroban-sdk = { version = "26", default-features = false, features = ["hazmat"] }
soroban-utils = { path = "contracts/common/soroban-utils" }
zkhash = { path = "circuits/poseidon_params/zkhash" }

[workspace.lints.rust]
missing_docs = "allow"
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
