[package]
name = "benzo-pool"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
contract-types = { workspace = true }
soroban-sdk = { workspace = true }
soroban-utils = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true }
ark-ff = { version = "0.6.0", default-features = false }
ark-groth16 = { version = "0.6.0", default-features = false, features = ["r1cs"] }
ark-relations = { version = "0.6.0", default-features = false }
ark-snark = { version = "0.6.0", default-features = false }
ark-std = { workspace = true }
benzo-merkle = { workspace = true }
benzo-nullifier-set = { workspace = true }
benzo-verifier-groth16 = { workspace = true }
benzo-viewkey-anchor = { workspace = true }
asp-membership = { workspace = true }
asp-non-membership = { workspace = true }
num-bigint = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }
zkhash = { workspace = true }

[lints]
workspace = true
