[package]
name = "benzo-verifier-groth16"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
contract-types = { workspace = true }
soroban-sdk = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true }
ark-ff = { version = "0.6.0", default-features = false }
ark-groth16 = { version = "0.6.0", default-features = false, features = ["r1cs"] }
ark-relations = { version = "0.6.0", default-features = false }
ark-snark = { version = "0.6.0", default-features = false }
ark-std = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-utils = { workspace = true }

[lints]
workspace = true
